# lda4microbiome_clean

./: .gitignore  README.md  pyproject.toml
data/: metadata2comparing.csv  new_taxa(only7).csv
lda4microbiome_backup/: __init__.py  metrics.py  stripesankey.py  stripesankey_v2.py  stripesankey_v3.py  stripesankey_with_clusters.py  training.py
lda_output/lda_results/: fully_integrated_sankey_data_improved.json
notebooks/: add_cluster_trajectories.py  create_sankey_with_cluster_trajectories.py  filter_sankey_by_k.py  interactive_sankey.py  stripesankey_pig_poster.py  weighted_soft_clustering_v2.py
